# workshop

./: .gitignore  .gitmodules  README.md
2019-08-03/: A-Birds-Eye-View-of-Substrate.md
2019-08-03/erc20-demo/: .gitignore  .rustfmt.toml  Cargo.toml  flow.md  flow.md.html
2019-08-03/erc20-demo/erc20-demo/: README.md
2019-08-03/erc20-demo/erc20-demo/runtime/wasm/: Cargo.toml  build.sh
2019-08-03/erc20-demo/erc20-demo/runtime/wasm/src/: lib.rs
2019-08-03/erc20-demo/src/: chain_spec.rs  cli.rs  main.rs  service.rs
2019-09-19/polkadot-js/part-1/: README.md  (+1 more)
2019-11-16/: README.md  substratekitties.rs
2019-11-16/kitties-game/: README.md
2019-11-16/merkle-mountain-range/: Cargo.toml
2019-11-16/substratekitties/: Cargo.toml
2019-11-16/substratekitties/runtime/wasm/: Cargo.toml  build.sh
2019-11-16/substratekitties/runtime/wasm/src/: lib.rs
2020-02-20/: README.md
2020-03-24/: README.md
2020-05-04/: Dockerfile  README.md  insert_offchain_key.sh  insert_validator_key.sh  nginx.conf  run.sh  run_nginx.sh  supervisor.conf  url2cloud.sh  url2local.sh
2020-06-23/: README.md
2020-06-23/validator/: README.md
2020-3-24-treasury/: README.md  package.json
2020-3-24-treasury/attach/: attach.sh  index.js  types.json
2020-3-24-treasury/generic/: main  main.rs
merkle-mountain-range/: Cargo.toml  README.md
merkle-mountain-range/src/: block.rs  hasher.rs  main.rs  merkle_mountain_range.rs  merkle_node.rs
minimal-substrate-development-environment-setup/: README.md  en_us.md  zh_cn.md
minimal-substrate-env-setup/: README.md  en_us.md  zh_cn.md
(+29 files in other folders)
