[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substratekitties-runtime-wasm'
version = '1.0.0'
[dependencies.substratekitties-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substratekitties-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
