[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'erc20-demo-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.erc20-demo-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['erc20-demo-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
